@@ -18,4 +18,5 @@ python3-systemfixtures
 python3-testtools
 python3-twisted
 python3-txfixtures
+python3-yaml
 python3-zope.interface
